--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,8 @@
     },
     "autoload": {
         "psr-4": {
+            "App\\Money\\": "src/Money",
+            "App\\Pizza\\": "src/Pizza",
             "App\\": "src/"
         }
     },
