--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,12 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+            - '../src/Pizza/Domain'
+            - '../src/Money/Domain'
+
+    App\Pizza\Presentation\Controller\:
+        resource: '../src/Pizza/Presentation/Controller'
+        tags: [ 'controller.service_arguments' ]
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
