--- a/composer.json
+++ b/composer.json
@@ -76,5 +76,8 @@
             "require": "6.0.*",
             "docker": true
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.36"
     }
 }
