--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
+        "symfony/uid": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.13",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -39,6 +40,7 @@
         "psr-4": {
             "App\\Money\\": "src/Money",
             "App\\Pizza\\": "src/Pizza",
+            "App\\Identifier\\": "src/Identifier",
             "App\\": "src/"
         }
     },
