--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    base_currency: 'EUR'
+    percentage_to_price: 50
 
 services:
     # default configuration for services in *this* file
@@ -26,6 +28,16 @@ services:
     App\Pizza\Presentation\Controller\:
         resource: '../src/Pizza/Presentation/Controller'
         tags: [ 'controller.service_arguments' ]
+
+    base.currency:
+        class: App\Money\Domain\Type\Currency
+        arguments:
+            $currency: '%base_currency%'
+
+    App\Pizza\Domain\Service\PizzaService:
+        arguments:
+            $currency: '@base.currency'
+            $percentageToPrice: '%percentage_to_price%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
