--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,10 +8,18 @@ services:
       - ./:/srv/app:rw,cached
       - ./docker/php/conf.d/symfony.dev.ini:/usr/local/etc/php/conf.d/symfony.ini
       # If you develop on Mac you can remove the var/ directory from the bind-mount
-      # for better performance by enabling the next line 
+      # for better performance by enabling the next line
       # - /srv/app/var
     environment:
       APP_ENV: dev
+
+  encore:
+    container_name: encore
+    image: node:14-alpine
+    ports:
+      - "${DEV_SERVER_PORT:-8080}:8080"
+    volumes:
+      - .:/srv/app
 
   caddy:
     volumes:
